# fast-graph

./: .gitignore  README.md  comlink.d.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: test.yml
benchmark/: README.md
benchmark/basic/: package-lock.json  package.json
benchmark/basic/src/: App.tsx
deno/: calc.bench.ts  calc.test.ts  job.bench.ts  run.ts  tree.bench.ts  tree.test.ts  tree_multithread.bench.ts  tree_singlethread.bench.ts  utils.ts  wasmEntry.ts
scripts/: replaceWorkerHelpers.js  workerHelpers.js
src/: App.tsx  CanvasControl.ts  dispose.ts  graph2d.ts  type.ts  utils.ts  wasm.ts  wasmEntry.ts
test/: add.test.ts
wasm/: Cargo.toml  Makefile
wasm/crates/generic_tree/: Cargo.toml
wasm/crates/generic_tree/src/: generic_tree.rs  lib.rs  node.rs  tree_data.rs
wasm/crates/generic_tree/tests/: test_generic_tree.rs
wasm/crates/simulation/: Cargo.toml
wasm/crates/simulation/examples/: nbody_force.rs  radial_force.rs  simulation_visualizer.rs  utils.rs
wasm/crates/simulation/src/: force.rs  force_data.rs  lib.rs  simulation.rs
wasm/crates/simulation/src/data/: force_data.rs  link_data.rs  mod.rs  point_data.rs
wasm/crates/simulation/src/force/: center_force.rs  collide_force.rs  force.rs  link_force.rs  mod.rs  nbody_force.rs  position_force.rs  radial_force.rs  utils.rs
wasm/crates/wasm/: Cargo.toml  Makefile
wasm/crates/wasm/src/: force_graph.rs  lib.rs
wasm/src/: lib.rs
