[package]
name = "generic_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
rayon = "1.5"
spmc = "0.3.0"
rand = "0.8.5"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
