[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.74"
rayon = "1.5"
wasm-bindgen-rayon = "1.0.3"
generic_tree = {path = "../generic_tree"}
simulation = {path = "../simulation"}
bumpalo = { version = "3.9.1", features=["collections", "boxed"] }
bumpalo-herd = "0.1.1"
getrandom = { version = "0.2", features = ["js"] }

[profile.release.package.wasm]
opt-level = 3

[profile.release]
debug = true
